# FuncTrack

./: Dockerfile  README.md  build.sh  gtrace_manual.txt
src/: CMakeLists.txt  elf_parser.h  gtrace.cc  pretty_print.c  pretty_print.h  syscall_nums.h  utils.c  utils.h
src/cmake/Modules/: FindLibDwarf.cmake  FindLibElf.cmake
